--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -534,8 +534,8 @@ def lm_setup_lttng(backends)
   FileUtils.mkdir_p(lttng_home_dir)
   FileUtils.mkdir_p(lttng_trace_dir_tmp)
   exec('lttng-sessiond --daemonize')
-  exec("lttng create #{lttng_session_uuid} -o #{lttng_trace_dir_tmp}")
 
+  exec("lttng create #{lttng_session_uuid} -o #{lttng_trace_dir_tmp}")
   File.write(File.join(lttng_trace_dir_tmp, 'thapi_metadata.yaml'), { type: 'lttng' }.to_yaml)
 
   channel_name = 'blocking-channel'
@@ -560,11 +560,15 @@ def lm_setup_lttng(backends)
     end
 
   end
+
+  exec("lttng enable-rotation --session=#{lttng_session_uuid} --size=50M --timer=60s") if OPTIONS.include?(:archive)
   exec("lttng start #{lttng_session_uuid}")
+  lttng_session_uuid
 end
 
 def lm_lttng_teardown_session
   raise unless mpi_local_master?
+  exec("lttng rotate #{lttng_session_uuid}") if OPTIONS[:archive]
   exec("lttng destroy #{lttng_session_uuid}")
 end
 
@@ -596,7 +600,23 @@ def lm_babeltrace(backends)
   opts << "--output #{thapi_trace_dir_tmp}"
   opts << "--backends #{backends.join(',')}"
   opts << '--no-discard-metadata' if type == 'aggreg' && OPTIONS.include?(:'kernel-verbose')
-  exec("#{BINDIR}/babeltrace_thapi #{opts.join(' ')} -- #{lttng_trace_dir_tmp}")
+
+  if OPTIONS[:archive]
+    read_file = File.join(lttng_trace_dir_tmp, 'bt_archive_ready')
+    opts << "--archive #{lttng_session_uuid} --session-found-file-path=#{read_file}"
+    cmd = "#{BINDIR}/babeltrace_thapi #{opts.join(' ')} -- #{lttng_trace_dir_tmp}"
+    LOGGER.debug(cmd)
+    pid_bt = spawn(cmd)
+
+    cmd = "laurence.py --log-level=CRITICAL #{lttng_session_uuid} 500"
+    LOGGER.debug(cmd)
+    pid_laurence = spawn(cmd)
+
+    sleep(1) until File.exist?(read_file)
+    [pid_bt, pid_laurence]
+  else
+    exec("#{BINDIR}/babeltrace_thapi #{opts.join(' ')} -- #{lttng_trace_dir_tmp}")
+  end
 end
 
 #   _
@@ -610,7 +630,6 @@ end
 
 def lm_move_to_shared
   raise unless mpi_local_master?
-
   if OPTIONS.include?(:trace) || !OPTIONS[:analysis]
     # The Apps finished, lttng finished, need to move to the shared tmp folder
     FileUtils.mkdir_p(File.dirname(thapi_trace_dir_tmp))
@@ -643,6 +662,7 @@ def gm_rename_folder
   thapi_trace_dir_root
 end
 
+
 # Start, Stop lttng, amd do the on-node analsysis
 def trace_and_on_node_processing(usr_argv)
   # Global barrier at exit
@@ -653,24 +673,37 @@ def trace_and_on_node_processing(usr_argv)
     # All ranks need to set the LLTTNG_HOME env
     # so they can have access to the daemon
     ENV['LTTNG_HOME'] = lttng_home_dir
-    # Only local master spawn LTTNG daemon and start session
-    lm_setup_lttng(backends) if mpi_local_master?
+    LOGGER.debug("LTTNG_HOME = #{ENV.fetch('LTTNG_HOME', nil)}")
+    
+    # Only local master spawn LTTNG daemon, start session, and possible babeltrace archibe
+    pids = if mpi_local_master?
+       lm_setup_lttng(backends)
+       lm_babeltrace(backends) if OPTIONS.include?(:archive)
+    end
+
+    # Other local node cannot start before lttng and the daemon
     syncd.local_barrier('waiting_for_lttng_setup')
+
     # Launch User Command
     launch_usr_bin(h, usr_argv)
-
     # We need to be sure that all the local ranks are finished
     # before the local master stops the lttng session
     syncd.local_barrier('waiting_for_application_ending')
+
+    # Everything from now on is local master processing
     return unless mpi_local_master?
 
     # Stop Lttng session
     lm_lttng_teardown_session
-    # Lttng session is finished,
+    if OPTIONS.include?(:archive)
+      LOGGER.debug("Waiting for babeltrace_thapi and laurence #{pids} to finish")
+      pids.each { |pid| Process.wait(pid) }
+    end
+    # Lttng session, and babeltrace2 finished,
     # we can kill the session daemon
     lm_lttng_kill_sessiond
     # Preprocess trace
-    lm_babeltrace(backends)
+    lm_babeltrace(backends) unless OPTIONS.include?(:archive)
     lm_move_to_shared
   end
   gm_rename_folder if mpi_master?
@@ -767,6 +800,7 @@ if __FILE__ == $PROGRAM_NAME
   parser.on('-b', '--backends BACKENDS', Array, "Select which and how backends' need to handled.",
             'Format: backend_name[:backend_level],...',
             default: ['mpi:3', 'omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'])
+  parser.on('--[no-]archive', 'Trigger for ardhive support', default: false)
 
   # Analysis
   parser.on('-r', '--replay [PATH]', 'Replay traces for post-mortem analysis.',
