--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -130,7 +130,7 @@ def get_components(names)
   components_classes = {
     'source.ctf.fs' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('fs'),
     'source.ctf.lttng_live' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('lttng-live'),
-    'source.ctf.lttng-archive' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('lttng-archive'),
+    'source.ctf.lttng_archive' => BT2::BTPlugin.find('ctf').get_source_component_class_by_name('lttng-archive'),
     'filter.utils.muxer' => BT2::BTPlugin.find('utils').get_filter_component_class_by_name('muxer'),
     'sink.text.pretty' => BT2::BTPlugin.find('text').get_sink_component_class_by_name('pretty'),
     'sink.ctf.fs' => BT2::BTPlugin.find('ctf').get_sink_component_class_by_name('fs'),
@@ -201,8 +201,8 @@ def get_and_add_components(graph, names, l_inputs)
       graph.add(comp, 'source_live',
                 params: { 'inputs' => $options[:inputs],
                           'session-not-found-action' => 'end' })
-    when 'source.ctf.lttng-archive'
-      graph.add(comp, 'source-archive',
+    when 'source.ctf.lttng_archive'
+      graph.add(comp, 'source_archive',
                 params: { 'session-name' => $options[:archive],
                           'session-found-file-path' => $options[:'session-found-file-path'] })
     when 'source.ctf.fs'
@@ -288,7 +288,7 @@ def bt_graphs(inputs)
                  'source.ctf.lttng_live'
                elsif $options[:archive]
                   'source.ctf.lttng-archive'
-              else
+               else
                  'source.ctf.fs'
                end]
 
