--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -97,6 +97,26 @@ lttng_ust_ze_sampling:
     - [ ctf_integer_hex, uintptr_t, hFabricPort, "(uintptr_t)hFabricPort" ]
     - [ ctf_sequence_text, uint8_t, pFabricPortState_val, pFabricPortState, size_t, "sizeof(zes_fabric_port_state_t)" ]
     - [ ctf_sequence_text, uint8_t, pFabricPortThroughput_val, pFabricPortThroughput, size_t, "sizeof(zes_fabric_port_throughput_t)" ]
+  - name: memoryProperties
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ zes_mem_handle_t, hMemModule ]
+    - [ zes_mem_properties_t *, pMemModuleProperties ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hMemModule, "(uintptr_t)hMemModule" ]
+    - [ ctf_sequence_text, uint8_t, pMemModuleProperties_val, pMemModuleProperties, size_t, "sizeof(zes_mem_properties_t)" ]
+  - name: memStats
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ zes_mem_handle_t, hMemModule ]
+    - [ zes_mem_state_t *, pMemState ]
+    - [ zes_mem_bandwidth_t *, pMemBandwidth ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer_hex, uintptr_t, hMemModule, "(uintptr_t)hMemModule" ]
+    - [ ctf_sequence_text, uint8_t, pMemState_val, pMemState, size_t, "sizeof(zes_mem_state_t)" ]
+    - [ ctf_sequence_text, uint8_t, pMemBandwidth_val, pMemBandwidth, size_t, "sizeof(zes_mem_bandwidth_t)" ]
 lttng_ust_ze_profiling:
   events:
   - name: event_profiling
