--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -257,3 +257,39 @@
               :field_class:
                 :type: double
                 :cast_type: float
+      - :name: lttng:memModule
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: deviceIdx
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: hMemModule
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: subDevice
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: rdBandwidth
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: wtBandwidth
+              :field_class:
+                :type: double
+                :cast_type: float
+            - :name: occupancy
+              :field_class:
+                :type: double
+                :cast_type: float
