--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -135,7 +135,7 @@ jobs:
           path: thapi.tar
 
   integration-tests:
-    needs: [babeltrace2, pre_job, install_with_mpi]
+    needs: [babeltrace2, pre_job, install-with-mpi]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Integration ${{ matrix.bats_file }} ${{matrix.thapi_sync_daemon }}
     runs-on: ubuntu-latest
