--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -97,7 +97,7 @@ jobs:
             build/config.log
             build/**/tests/*.log
 
-  install_with_mpi:
+  install-with-mpi:
     needs: [babeltrace2, pre_job]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Install with MPI daemon support
@@ -135,21 +135,13 @@ jobs:
           path: thapi.tar
 
   integration-tests:
-    needs: [babeltrace2, pre_job, install_with_mpi]
+    needs: [babeltrace2, pre_job, install-with-mpi]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Integration ${{ matrix.bats_file }} ${{matrix.thapi_sync_daemon }}
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        thapi_sync_daemon: ['fs', 'mpi']
-        bats_file: ['mpi_sync_daemon', 'mpi_iprof']
-        include:
-          - bats_file: 'iprof'
-            thapi_sync_daemon: 'fs' # Need to force, if not `THAPI_SYNC_DAEMON` will be set to empty list
     env:
       THAPI_TEST_BIN: clinfo
       THAPI_BIN_DIR: ./build/ici/bin
-      THAPI_SYNC_DAEMON: ${{ matrix.thapi_sync_daemon }}
     steps:
       - uses: actions/checkout@v4
       - uses: mpi4py/setup-mpi@v1
@@ -171,9 +163,9 @@ jobs:
         run: |
           echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
           echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-      - name: integration test ${{ matrix.bats_file }}
+      - name: Integration test
         run: |
-          bats integration_tests/${{ matrix.bats_file }}.bats
+          bats integration_tests/
 
   build-in-tree:
     needs: [babeltrace2, pre_job]
@@ -274,17 +266,17 @@ jobs:
         working-directory: build
       - run: make dist
         working-directory: build
-      - name: extract
+      - name: Extract
         run: tar -xzvf thapi-*
         working-directory: build
-      - name: configure
+      - name: Configure
         run: |
           cd `find . -type d -name "thapi-*"`
           mkdir -p build
           cd build
           ../configure
         working-directory: build
-      - name: make -j check
+      - name: Check
         run: |
           cd `find . -type d -name "thapi-*"`
           cd build
