--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -105,6 +105,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: mpi4py/setup-mpi@v1
+        with:
+          mpi: intelmpi 
       - uses: actions/cache@v4
         id: babeltrace2
         env:
@@ -145,6 +147,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: mpi4py/setup-mpi@v1
+        with:
+          mpi: intelmpi
       - uses: actions/cache@v4
         id: babeltrace2
         env:
