--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -33,7 +33,8 @@ jobs:
       - run: git clone -b anl-ms3 git://git.efficios.com/deliverable/babeltrace.git babeltrace2-2.0.5
         if: steps.babeltrace2.outputs.cache-hit != 'true'
       - run: |
-          patch -p1 < ../THAPI/.github/workflows/str_nullptr.patch
+          wget https://github.com/argonne-lcf/THAPI/blob/53262fcaaaf45d7d475884d7e63b69abe47e41d6/.github/workflows/str_nullptr.patch
+          patch -p1 < str_nullptr.patch
         if: steps.babeltrace2.outputs.cache-hit != 'true'
         working-directory: babeltrace2-2.0.5
       - run: mkdir -p babeltrace2-2.0.5/build
