--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -17,23 +17,9 @@ jobs:
   userspace-rcu:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    name: Build urcu
+    name: Build urcu and lttng-tools
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev
-      - run: git clone https://github.com/urcu/userspace-rcu
-      - run: |
-         ./bootstrap
-         ./configure --prefix=$HOME/babeltrace2/2.0.4
-         make -j 32 install
-        working-directory: userspace-rcu
-  lttng-tools:
-    needs: [pre_job, userspace-rcu]
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    name: Build lttng-tools
-    runs-on: ubuntu-latest
-    steps:
-      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev
       - name: Load Env
         run: |
           echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
@@ -41,6 +27,13 @@ jobs:
           echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
           echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
           echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
+      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev
+      - run: git clone https://github.com/urcu/userspace-rcu
+      - run: |
+         ./bootstrap
+         ./configure --prefix=$HOME/babeltrace2/2.0.4
+         make -j 32 install
+        working-directory: userspace-rcu
       - run: git clone -b anl-ms3 git://git.efficios.com/deliverable/lttng-tools.git
       - run: |
          ./bootstrap
