--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -42,7 +42,7 @@ jobs:
          make install
         working-directory: lttng-tools
   babeltrace2:
-    needs: [pre_job,lttng-tools]
+    needs: [pre_job,userspace-rcu]
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Build and cache Babeltrace2
     runs-on: ubuntu-24.04
