--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -37,7 +37,7 @@ jobs:
       - run: git clone https://github.com/lttng/lttng-ust
       - run: |
          ./bootstrap
-         ./configure --prefix=$HOME/babeltrace2/2.0.4
+         ./configure --disable-man-pages --prefix=$HOME/babeltrace2/2.0.4
          make -j 32 install
         working-directory: lttng-ust
       - run: git clone -b anl-ms3 git://git.efficios.com/deliverable/lttng-tools.git
