--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -28,18 +28,20 @@ jobs:
           echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
           echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
       - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev libnuma-dev 
-      - run: git clone https://github.com/urcu/userspace-rcu
+      - run: git clone -b stable-0.14 https://github.com/urcu/userspace-rcu
       - run: |
          ./bootstrap
          ./configure --prefix=$HOME/babeltrace2/2.0.4
          make -j 32 install
         working-directory: userspace-rcu
+      # Not yet any relase for 2.14, so take master
       - run: git clone https://github.com/lttng/lttng-ust
       - run: |
          ./bootstrap
          ./configure --disable-man-pages --prefix=$HOME/babeltrace2/2.0.4
          make -j 32 install
         working-directory: lttng-ust
+      # lttng-tools need lttng-ust 2.14+
       - run: git clone -b anl-ms3 git://git.efficios.com/deliverable/lttng-tools.git
       - run: |
          ./bootstrap
