--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -27,14 +27,15 @@ jobs:
           echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
           echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
           echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
-      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev libnuma-dev 
+      - run: ls /usr/include/
+      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev libnuma-dev libc-dev
       - run: git clone -b stable-0.14 https://github.com/urcu/userspace-rcu
       - run: |
          ./bootstrap
          ./configure --prefix=$HOME/babeltrace2/2.0.4
          make -j 32 install
         working-directory: userspace-rcu
-      # Not yet any relase for 2.14, so take master
+      # Not yet any release for 2.14, so take master
       - run: git clone https://github.com/lttng/lttng-ust
       - run: |
          ./bootstrap
