--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -18,35 +18,25 @@ jobs:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Build urcu and lttng-tools
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-ubuntu-24.04
     steps:
       - name: Load Env
         run: |
-          echo "$HOME/babeltrace2/2.0.4/bin" >> $GITHUB_PATH
-          echo "PKG_CONFIG_PATH=$HOME/babeltrace2/2.0.4/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
-          echo "CPATH=$HOME/babeltrace2/2.0.4/include:$CPATH" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-          echo "LIBRARY_PATH=$HOME/babeltrace2/2.0.4/lib:$LIBRARY_PATH" >> $GITHUB_ENV
+          echo "PKG_CONFIG_PATH=$HOME/babeltrace2/2.0.5/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
       - run: ls /usr/include/
-      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev libnuma-dev libc-dev
-      - run: git clone -b stable-0.14 https://github.com/urcu/userspace-rcu
-      - run: |
-         ./bootstrap
-         ./configure --prefix=$HOME/babeltrace2/2.0.4
-         make -j 32 install
-        working-directory: userspace-rcu
-      # Not yet any release for 2.14, so take master
+      - run: sudo apt update; sudo apt install -y gcc g++ libpopt-dev libnuma-dev liburcu-dev libc-dev
       - run: git clone https://github.com/lttng/lttng-ust
       - run: |
          ./bootstrap
-         ./configure --disable-man-pages --prefix=$HOME/babeltrace2/2.0.4
-         make -j 32 install
+         ./configure --disable-man-pages --prefix=$HOME/babeltrace2/2.0.5
+         make -j
+         make install
         working-directory: lttng-ust
       # lttng-tools need lttng-ust 2.14+
       - run: git clone -b anl-ms3 git://git.efficios.com/deliverable/lttng-tools.git
       - run: |
          ./bootstrap
-         ./configure --disable-bin-lttng-crash --prefix=$HOME/babeltrace2/2.0.4
+         ./configure --disable-man-pages --disable-bin-lttng-crash --prefix=$HOME/babeltrace2/2.0.5
          make -j
          make install
         working-directory: lttng-tools
@@ -74,7 +64,7 @@ jobs:
         if: steps.babeltrace2.outputs.cache-hit != 'true'
       - run: |
           ./bootstrap
-          ./configure --prefix=$HOME/babeltrace2/2.0.5
+          ./configure --disable-man-pages --prefix=$HOME/babeltrace2/2.0.5
           make -j
           make install
         if: steps.babeltrace2.outputs.cache-hit != 'true'
