--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -18,7 +18,7 @@ jobs:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     name: Build urcu and lttng-tools
-    runs-on: ubuntu-ubuntu-24.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Load Env
         run: |
